# bugle

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.TXT  README.md  README.txt  blang.bat.in  blang.sh  blang.sh.in  clblang.bat.in  clblang.sh  cublang.sh
.github/workflows/: build-and-test.yml
.travis/: travis_build_and_test.sh
examples/: assert-invar.c  assert-invar2.c  assert-ptr.c  assert-simple.c  assert.c  call.c  cond.c  fib.c  fill.c  gep.c  icmp.c  nullptr.c  ptrcall.cl  ptrphi.cl  ptrret.cl  reqens.c  switch.c  vector-float.c  vector.c
include/: bugle.h
include-blang/: annotations.h  bugle.h  cooperative_groups.h  cuda.h  cuda_atomics.h  cuda_cooperative_groups.h  cuda_curand.h  cuda_intrinsics.h  cuda_math_constants.h  cuda_math_functions.h  cuda_textures.h  cuda_vectors.h  device_qualifier.h  opencl.h  opencl_async.h  opencl_atomics.h  opencl_builtins.h  opencl_limits.h
include-blang/annotations/: annotations.h  barrier_invariants.h  barrier_invariants_autogenerated_definitions.h  barrier_invariants_autogenerated_no_annotations.h  candidate_annotations.h  cl_pointer_annotations.h  cu_pointer_annotations.h  gen_barrier_invariants.py  gen_barrier_invariants_no_annotations.py  gen_noovfl.py  no_annotations.h  noovfl_predicates_autogenerated_definitions.h
include-blang/clc/async/: async_work_group_copy.h  async_work_group_copy.inc  async_work_group_strided_copy.h  async_work_group_strided_copy.inc  wait_group_events.h
include-blang/clc/atomic/: atomic_add.h  atomic_and.h  atomic_cmpxchg.h  atomic_dec.h  atomic_decl.inc  atomic_inc.h  atomic_max.h  atomic_min.h  atomic_or.h  atomic_sub.h  atomic_unary_decl.inc  atomic_xchg.h  atomic_xor.h
include-blang/clc/cl_khr_global_int32_base_atomics/: atom_add.h  atom_cmpxchg.h  atom_dec.h  atom_decl.inc  atom_inc.h  atom_sub.h  atom_unary_decl.inc  atom_xchg.h
include-blang/clc/cl_khr_global_int32_extended_atomics/: atom_and.h  atom_max.h  atom_min.h  atom_or.h  atom_xor.h
include-blang/clc/cl_khr_local_int32_base_atomics/: atom_add.h  atom_binary_decl.inc  atom_cmpxchg.h  atom_dec.h  atom_inc.h  atom_single_decl.inc  atom_sub.h  atom_xchg.h
include-blang/clc/cl_khr_local_int32_extended_atomics/: atom_and.h  atom_max.h  atom_min.h  atom_or.h  atom_xor.h
include-blang/clc/geometric/: distance.h  distance.inc  fast_distance.h  fast_distance.inc  fast_length.h  fast_length.inc  fast_normalize.h  length.h  length.inc  normalize.h
include-blang/clc/math/: acos.h  acosh.h  acospi.h  asin.h  asinh.h  asinpi.h  atan.h  atan2.h  atan2pi.h  atanh.h  atanpi.h  binary_def.inc  binary_vectorize.inc  cbrt.h  cos.h  cosh.h  cospi.h  erf.h  erfc.h  exp.h  exp.inc  exp10.h  exp10.inc  exp2.h  expm1.h  fdim.h  fmod.h  half_cos.h  half_divide.h  half_exp.h  half_exp10.h  half_exp2.h  half_log.h  half_log10.h  half_log2.h  half_powr.h  half_recip.h  half_rsqrt.h  half_sin.h  half_sqrt.h  (+30 more)
include-blang/clc/synchronization/: barrier.h
include-libclc/: annotations.h  opencl.h
include-libclc/clc/synchronization/: barrier.h
include/bugle/: BPLExprWriter.h  BPLFunctionWriter.h  BPLModuleWriter.h  BasicBlock.h  Casting.h  Expr.h  Function.h  GlobalArray.h  Ident.h  IntegerRepresentation.h  Module.h  OwningPtrVector.h  RaceInstrumenter.h  Ref.h  SourceLoc.h  SourceLocWriter.h  SpecificationInfo.h  Stmt.h  Type.h  Var.h
include/bugle/Preprocessing/: ArgumentPromotionPass.h  ArgumentRenamePass.h  CycleDetectPass.h  FreshArrayPass.h  InlinePass.h  RemoveBodyPass.h  RemovePrototypePass.h  RestrictDetectPass.h  SimpleInternalizePass.h  StructSimplificationPass.h  Vector3SimplificationPass.h
include/bugle/Transform/: SimplifyStmt.h
include/bugle/Translator/: TranslateFunction.h  TranslateModule.h
include/bugle/util/: ErrorReporter.h  Functional.h  UniqueNameSet.h
include/klee/util/: GetElementPtrTypeIterator.h
lib/Boogie/: BPLExprWriter.cpp  BPLFunctionWriter.cpp  BPLModuleWriter.cpp  BVIntegerRepresentation.cpp  Expr.cpp  Ident.cpp  MathIntegerRepresentation.cpp  SourceLocWriter.cpp  Stmt.cpp
lib/InlineCheckPlugin/: InlineCheckPlugin.cpp
lib/Preprocessing/: ArgumentPromotionPass.cpp  ArgumentRenamePass.cpp  CycleDetectPass.cpp  FreshArrayPass.cpp  InlinePass.cpp  RemoveBodyPass.cpp  RemovePrototypePass.cpp  RestrictDetectPass.cpp  SimpleInternalizePass.cpp  StructSimplificationPass.cpp  Vector3SimplificationPass.cpp
lib/Transform/: SimplifyStmt.cpp
lib/Translator/: BasicBlockTranslator.cpp  TranslateFunction.cpp  TranslateModule.cpp
lib/Util/: ErrorReporter.cpp  UniqueNameSet.cpp
src/: main.cpp
tools/: bugle-demangle.cpp  bugle.cpp
